--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,16 @@
 			<version>3.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version> <!-- Verifica la última versión disponible -->
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.13.0</version> <!-- Usa la versión correspondiente de Jackson -->
+		</dependency>
+
 	</dependencies>
 </project>
